<resources>
    <string name="app_name">요비</string>
    <!-- 바텀바 -->
    <string name="schedule">일정표</string>
    <string name="care_list">돌봄 목록</string>
    <string name="measurement">측정</string>
    <string name="visit_log">일지</string>
    <string name="my">마이</string>

    <!-- 공통 -->
    <string name="back">뒤로가기</string>
    <string name="yes">확인</string>
    <string name="no">취소</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="close">닫기</string>
    <string name="result">결과</string>
    <string name="high">높음</string>
    <string name="mid">보통</string>
    <string name="low">낮음</string>
    <string name="one">1</string>
    <string name="two">2</string>

    <!-- 건강 지표 -->
    <string name="body_composition">체성분</string>
    <string name="heart_rate">심박</string>
    <string name="blood_pressure">혈압</string>
    <string name="stress">스트레스</string>
    <string name="temperature">체온</string>

    <!-- 건강 지표 항목 이름 -->
    <string name="bfp">체지방률</string>
    <string name="bfm">체지방량</string>
    <string name="protein">단백질량</string>
    <string name="smm">근육량</string>
    <string name="mineral">무기질량</string>
    <string name="bmr">기초대사량</string>
    <string name="body_age">신체나이</string>
    <string name="water">체내수분</string>
    <string name="sbp">수축기</string>
    <string name="dbp">이완기</string>
    <string name="bpm">심박수</string>
    <string name="oxygen">산소포화도</string>
    <string name="stress_value">스트레스 지수</string>
    <string name="stress_level">스트레스 등급</string>
    <string name="temp">체온</string>

    <!-- 건강 지표 단위 -->
    <string name="unit_percent">%</string>
    <string name="unit_kg">kg</string>
    <string name="unit_kcal">kcal</string>
    <string name="unit_age">세</string>
    <string name="unit_mmHg">mmHg</string>
    <string name="unit_bpm">bpm</string>
    <string name="unit_celsius">°C</string>

    <!-- 다이얼로그 -->
    <string name="logout_title">로그아웃 하시겠습니까?</string>
    <string name="logout_subtitle">다음 사용시 다시 로그인하셔야 합니다.</string>
    <string name="withdrawal_title">탈퇴 하시겠습니까?</string>
    <string name="withdrawal_subtitle">해당 계정을 다시 사용하실 수 없습니다.</string>
    <string name="schedule_register_title">일정 등록 방법을 선택해주세요</string>
    <string name="schedule_register_subtitle">두 가지 방법 중 하나를 택해주세요.</string>
    <string name="schedule_delete_title">일정을 삭제하시겠습니까?</string>
    <string name="schedule_delete_subtitle">일정에 대한 모든 내용이 삭제됩니다.</string>
    <string name="register_by_photo">사진으로 등록</string>
    <string name="register_by_text">직접 등록</string>
    <string name="delete_title">일지를 삭제하시겠습니까?</string>
    <string name="delete_subtitle">일지 삭제시, 복구할수 없습니다.</string>

    <!-- 측정 -->
    <string name="measure">측정하기</string>
    <string name="measure_title">%s님 측정하기</string>
    <string name="measure_target_question">어떤 분의 건강상태를\n측정하시나요?</string>
    <string name="measure_item_subtitle">주간 보고서 생성이 가능한 상태입니다</string>
    <string name="measure_grip_guide">바른 자세로 서서 양팔을 길게 뻗어\n양손의 엄지와 검지를 이용하여\n금속전극 판을 가볍게 잡아주세요</string>
    <string name="measure_finger_touch_guide">측정을 위해\n기기에 검지 손가락을\n대어주세요</string>
    <string name="measure_forehead_touch_guide">체온 측정을 위해\n이마에 기기를\n대어주세요</string>
    <string name="measure_start">측정 시작</string>
    <string name="bluetooth_connect_instruction">블루투스를 통해 기기를 연결해주세요</string>
    <string name="bluetooth_setting_instruction">휴대전화의 <b>설정</b>에서 <b>연결</b>을 선택해\n<b>블루투스</b>를 실행해주세요</string>
    <string name="bluetooth_help_needed">블루투스 실행이 어려워요</string>
    <string name="device_power_instruction">기기의 전원버튼을 꾹 눌러\n<b>연결</b>을 진행해주세요</string>
    <string name="bluetooth_how_to_title">블루투스 실행하는 법</string>
    <string name="bluetooth_method_select">두 방법 중 하나를 선택해주세요</string>
    <string name="bluetooth_method_1_title">방법 1</string>
    <string name="bluetooth_method_1_detail">휴대폰 화면 내 설정창의 블루투스를 켜주세요</string>
    <string name="bluetooth_method_2_title">방법 2</string>
    <string name="bluetooth_method_2_detail">휴대폰 설정창을 켜 연결, 블루투스를 차례로\n선택해주세요</string>
    <string name="bluetooth">블루투스</string>
    <string name="measuring_status">측정 중</string>
    <string name="measurement_instruction_title">움직이거나 말하지 말아 주세요</string>
    <string name="measurement_instruction_subtitle">최대 30초까지 걸릴 수 있습니다</string>
    <string name="measure_transition_guide">체성분 측정이 완료되었습니다\n혈압 측정을 시작합니다</string>

    <!--STT 일지-->
    <string name="recording">기록중</string>
    <string name="save">저장하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>